<resources>
    <string name="app_name">Shake</string>
    <string name="title_text">Shake App</string>
    <string name="text_box">Default text here</string>
    <string name="button_text">Start!</string>
    <string name="x_axis_text">X-Axis:  0</string>
    <string name="y_axis_text">Y-Axis:  0</string>
    <string name="z_axis_text">Z-Axis:  0</string>
    <string name="frag_text"> </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>